# csds413-term-project

./: .gitignore  CSDS413_TermProject-2.md  README.md  pyproject.toml
Data_visualisation/: CWRU_Comparison_Data.xlsx  Data Visualisation notes.md  analysis.ipynb  quality_metric_analysis.ipynb  quality_metric_exploration.ipynb
Data_visualisation/scripts/: CWRU_Comparison_Data.xlsx  Comprehensive_Analysis_Report.md  Methodology_Report.md  Report Draft.md  Report-Draft.md  Visualization-Challenge-Report.md  cwru_improved_analysis.ipynb  pipeline.ipynb  ~$CWRU_Comparison_Data.xlsx
csds413_term_project/axp1343/results/: classification_results.csv  enhanced_classification_results.csv  feature_analysis.csv  feature_mapping.npy  feature_set_comparison.csv  recommended_features.csv  report.md  results.md
csds413_term_project/axp1343/scripts/: classification.py  clustering_analysis.py  enhanced_classification.py  feature_engineering.py  statistical_analysis.ipynb  updated_analysis.ipynb
csds413_term_project/proposal/: csds413_project_proposal_wxs428_jma195.tex  csds413_project_proposal_wxs428_jma195_adp169.tex  datasets.tex  execution.tex  hypothesis.tex  interpretation.tex  main.tex  question.tex  titlepage.tex  validation.tex  validation_interpretation.tex  visualization.tex  work_plan.tex
csds413_term_project/results/: statistical_test_results.csv
csds413_term_project/scripts/: classification.py  feature_extract.py  statistical_analysis.ipynb  tweepfake_clean.py
vis_challenge_jma195/: graduation_rates.csv  vis_challenge.py
(+11 files in other folders)
