[tool.poetry]
name = "csds413-term-project"
version = "0.1.0"
description = "CSDS 413 Term Project"
authors = ["Jacob Anderson <jma195@case.edu>, Wiam Skakri <wxs428@case.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
nltk = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.16.3"
matplotlib = "^3.10.7"
